# tapr

./: Cargo.toml  README.md
.github/workflows/: tests.yaml
src/: column_width_allocator.rs  constants.rs  formatter.rs  lib.rs  main.rs  safe_terminal_size.rs  table_reader.rs  utils.rs
