[package]
name = "tapr"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-normalization = "0.1"
unicode-segmentation = "1.9"
unicode-width = "0.1"
terminal_size = "0.1"
structopt = "0.3"
lazy_static = "1.4"
